# openpol

./: .travis.yml  Cargo.toml  README.md  build.rs  grafdat13h
.github/workflows/: ci.yml
src/: audio.rs  fontdat.rs  grafdat.rs  image13h.rs  input.rs  lib.rs  paldat.rs  ppm.rs  sounddat.rs
