[package]
name = "openpol"
version = "0.3.0"
authors = ["Jakub Stasiak <jakub@stasiak.at>"]
license = "GPL-2.0"
edition = "2018"
description = "OpenPol"
repository = "https://github.com/jstasiak/openpol"
readme = "README.md"
default-run = "openpol"

[badges]
travis-ci = { repository = "jstasiak/openpol" }

[dependencies]
flic = ">0.0.0"
sdl2-sys = ">0.0.0"

[dependencies.sdl2]
version = ">0.0.0"
features = ["bundled", "static-link"]

[dependencies.rodio]
version = "^0.16.0"
features = ["vorbis"]
default-features = false
